Now sends editable text. Added class "Contact"